--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     Ink theory Ink theory 
 </p>
 <a href="https://www.youtube.com/watch?v=EnQ42cNINaU">Broken Coral</a>
-
-
+<p><i>
+    My first week... <br> I planned on how to do my Rube Goldberg machine. I also learned how to use TinkerCAD. I used it to make a design for the machine. I also did an activity with it where I had to build an object from my house.
+</i></p>
+<a href="https://www.tinkercad.com/things/dUhj5ar8xnn-nintendo-switch-engineering/edit">My Project</a>
+<img src="tinkercad.png">
 
 
 
