--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
 </p>
 <a href="https://www.youtube.com/watch?v=EnQ42cNINaU">Broken Coral</a>
 <p><i>
-    My first week... <br> I planned on how to do my Rube Goldberg machine. I also learned how to use TinkerCAD. I used it to make a design for the machine. I also did an activity with it where I had to build an object from my house. I decided to make a game console. I had to put detail into it and the most detailed object won a kit kat. I won the challenge. I made it with accurate measurements. I also continued to work on the Rube Goldberg machine by making the measurements more accurate. I added more details and polished it. 
+    My second week... <br> This week, I learned about mechanical engineering. I learned many things like what it was and what you could do in it. I learned that people make machines. I also learned how they draft and design it. My teacher went over safety slides and I had a quiz on it. My class also started a project where you put together simple machines to try and complete a task. It is called a Rube Goldberg Machine. I can only use cardboard and tape. The task is to use a baseball to pop a balloon with those simple machines. The teacher also taught us how to use TinkerCad, a website. We used the website to start making a model for our Rube Goldberg Machine.
+</i></p>
+<p><i>
+    My third week... <br> This week, I had a challenge. The challenge was to get an object from my home and remake it using TinkerCAD. It was a competition, and whoever made the most detailed looking object won. I decided to make a game console. I used different shapes and colors to try and make my object as detailed as possible. After the challenge, I continued to work on my Rube Goldberg model. I tried improving it by using more accurate measurements. I added a few more details to make it easier to know what I was doing. I also had another challenge on friday, where I had to make an E using accurate measurements. I had to give that E to somebody else and they had to cut it out, and whoever had the most accurate E won.
+</i></p>
+
+
+
+<p><i>
+    My third week... <br> I planned on how to do my Rube Goldberg machine. I also learned how to use TinkerCAD. I used it to make a design for the machine. I also did an activity with it where I had to build an object from my house. I decided to make a game console. I had to put detail into it and the most detailed object won a kit kat. I won the challenge. I made it with accurate measurements. I also continued to work on the Rube Goldberg machine by making the measurements more accurate. I added more details and polished it. 
 
 </i></p>
 <a href="https://www.tinkercad.com/things/dUhj5ar8xnn-nintendo-switch-engineering/edit">My Project</a>
