--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 <p><i>
     My third week... <br> This week, I had a challenge. The challenge was to get an object from my home and remake it using TinkerCAD. It was a competition, and whoever made the most detailed looking object won. I decided to make a game console. I used different shapes and colors to try and make my object as detailed as possible. After the challenge, I continued to work on my Rube Goldberg model. I tried improving it by using more accurate measurements. I added a few more details to make it easier to know what I was doing. I also had another challenge on friday, where I had to make an E using accurate measurements. I had to give that E to somebody else and they had to cut it out, and whoever had the most accurate E won.
 </i></p>
-
+<p><i>
+    My fourth week... <br> THis week, I worked on my Rube Goldberg machine. I increased the size of it. I also started building it with cardboard. I drew pieces of the machines and cut it out. I used a lot of tape to connect and reinforce the pieces. I also had a challenge where I had to build a paper boat and see if it could float for 5 minutes with weights on it. I searched up a video on how to make a sturdy boat. I made it and added weights. It down in less than a second. I figured I used too many weights. I was disappointed.
+    
+</i></p>
 
 
 
