--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
 </i></p>
 <p><i>
     My fourth week... <br> THis week, I worked on my Rube Goldberg machine. I increased the size of it. I also started building it with cardboard. I drew pieces of the machines and cut it out. I used a lot of tape to connect and reinforce the pieces. I also had a challenge where I had to build a paper boat and see if it could float for 5 minutes with weights on it. I searched up a video on how to make a sturdy boat. I made it and added weights. It down in less than a second. I figured I used too many weights. I was disappointed.
-    
 </i></p>
-
+<p><i>
+    My fifth week... <br> This week, I continued to work on my Rube Goldberg machine. I used a lot of tape to reinforce and keep things sturdy. I also went to an assembly for the first time in highschool.
+    The day after the assembly, I took the MAP test. I got a pretty good score. Today, I continued my Rube Goldberg machine. I added a few more things like a wall and upgraded the lever. 
+    I then added the balloon and tested. It failed the first time, but the pin hit the balloon. So we tried again, and it worked.
+</i></p>
 
 
 <a href="https://www.tinkercad.com/things/dUhj5ar8xnn-nintendo-switch-engineering/edit">My Project</a>
