--- a/index.html
+++ b/index.html
@@ -24,8 +24,32 @@
     The day after the assembly, I took the MAP test. I got a pretty good score. Today, I continued my Rube Goldberg machine. I added a few more things like a wall and upgraded the lever. 
     I then added the balloon and tested. It failed the first time, but the pin hit the balloon. So we tried again, and it worked.
 </i></p>
-
-
+<p><i>
+    My sixth week... <br> This week was fun but a little annoying. 
+    On Monday, we were told that we would be disecting a labtop. We went over the activites we would do and the homework.
+    On Wednesday, we got the labtops. I formed a group with 2 other people. 
+    Together, we started disassembling the labtop. I had a screw driver with no handle, and that slowed down the process by a lot.
+    I took out most of the components, and on Friday I continued. I completely disassembled the labtop and colored and labeled on a worksheet.
+    Then I had to reassemble everything.
+</i></p>
+<p><i>
+    My seventh week... <br> This week was kind of boring. 
+    On Monday, we didn't really do much. On Wednesday, we researched animals 
+    that we liked. The assignment was to find an animal that lost an important limb.
+    We had to find what prosthetic they used to help the animal. We then had to find 
+    what material was used to make it, how it was attached, and other things like that.
+    We then went to TinkerCAD and made a model of the prosthetic limb.
+    On Friday, we did an activity where we had write a step by step how to make a PB&J sandwich.
+    We then had people go to the front and make a sandwich with those steps. It was pretty fun.
+</i></p>
+<p><i>
+    My eighth week... <br> This week was interesting. The schedule was weird.
+    On Monday, it was a normal 1,3,5 day. On Tuesday, it was a 2,4,6 day. 
+    On Wednesday, I took the PSAT. It was boring, but it helped me understand
+    what the PSAT would be like. Today, I did an activity where I built a paper airplane 
+    and threw it to try and make it in a trash can. My plane got stuck in a tree. 
+    Tomorrow, I think I am just going to work on my website. My photos still wont work, so I might fix that.
+</i></p>
 <a href="https://www.tinkercad.com/things/dUhj5ar8xnn-nintendo-switch-engineering/edit">My Project</a>
 <img src="tinkercad.png">
 
