--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
     and threw it to try and make it in a trash can. My plane got stuck in a tree. 
     Tomorrow, I think I am just going to work on my website. My photos still wont work, so I might fix that.
 </i></p>
+<p><i>
+    My ninth week... <br> This week was fun. The schedule was weird again.
+    We learned about rockets and how they worked. We made models for bottled rockets on TinkerCAD.
+    We started working on building them. We used materials like cardboard and tape.
+    We also used hot glue to stick things together. My design was a triangle sandwich with the bottle in the middle.
+    When we tested it, it flipped twice and nose-dived the ground. It could have worked better if I angled it a little more down, 45 degree angle.
+</i></p>
 <a href="https://www.tinkercad.com/things/dUhj5ar8xnn-nintendo-switch-engineering/edit">My Project</a>
 <img src="tinkercad.png">
 
