--- a/index.html
+++ b/index.html
@@ -57,6 +57,27 @@
     We also used hot glue to stick things together. My design was a triangle sandwich with the bottle in the middle.
     When we tested it, it flipped twice and nose-dived the ground. It could have worked better if I angled it a little more down, 45 degree angle.
 </i></p>
+<p><i>
+    My tenth week... <br> This week was interesting. The schedule was weird this week as well.
+    We did a challenge with candycorn. We had to see how many candycorns would fit on a sheet of paper.
+    My guess was near the 200s. We also learned about environmental engineering.
+    We learned about things people made to help the environment. For example, we learned that people made water purifiers so that people without water would have something to drink.
+    We also learned how to make a purifier. We had a challenge where he made one and see which group had the clearest water after the challenge.
+</i></p>
+<p><i>
+    My eleventh week... <br> This week was fun. Our monday was a normal day again.
+    This week, we learned about electrical engineering. We learned about circuit boards and other things in computers, etc.
+    We went over slides talking about electrical engineering, and I think I learned a lot. After, we did a tinkerCAD on a "bread board."
+    On the board, we connected wires, resistors. and led lights. Our goal was to try and make them light up. 
+    We learned about different types like parallel and series circuits. I made both models and we are supposed to use the real bread boards next week.
+</i></p>
+<p><i>
+    My twelfth week... <br> This week was also fun. This week's schedule was weird once again. 
+    We started working with the bread boards. We messed around with them.
+    We made parallel and series circuits, and used the multimeter to measure volts. We also got to make our own experiments.
+    On thursday, I did a challenge on what I would rather do. The options were to sit in a math class for 50 minutes everyday for a school year, or count to a million.
+    I chose to sit through the math class because it would take a shorter time. I wouldn't mind because I do it anyways.
+</i></p>
 <a href="https://www.tinkercad.com/things/dUhj5ar8xnn-nintendo-switch-engineering/edit">My Project</a>
 <img src="tinkercad.png">
 
