--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@
     On thursday, I did a challenge on what I would rather do. The options were to sit in a math class for 50 minutes everyday for a school year, or count to a million.
     I chose to sit through the math class because it would take a shorter time. I wouldn't mind because I do it anyways.
 </i></p>
+<p><i>
+    My thirteenth week... <br> This week was confusing. We messed around with bread boards again.
+    We started using a new program called Arduino. We used it to code.
+    We used the code to make our led lights shine. We then coded it to flicker.
+    It was tough at first, but after a few tries, we got it to work. We then messed around with the code to find other things.
+    We couldn't get it to do anything else. I learned how to use code to change the ways led lights worked.
+</i></p></P>
 <a href="https://www.tinkercad.com/things/dUhj5ar8xnn-nintendo-switch-engineering/edit">My Project</a>
 <img src="tinkercad.png">
 
