--- a/index.html
+++ b/index.html
@@ -84,6 +84,22 @@
     We used the code to make our led lights shine. We then coded it to flicker.
     It was tough at first, but after a few tries, we got it to work. We then messed around with the code to find other things.
     We couldn't get it to do anything else. I learned how to use code to change the ways led lights worked.
+    
+    <p><i>
+        My fourteenth week... <br> I was very tired this week. It was our first week back from our Winter Break.
+        This week, we learned about business engineering. We learned about many different inventions people made that helps us in our every day lives.
+        We did an activity that was similar to Shark Tank. Me and my friend came up with the idea of a "Foon."
+        It was supposed to be a spork but better. Some people liked our idea, but one person shut it down with something they had.
+        It was a fun week and I learned a lot about business engineering.
+    </i></p>
+    <p><i>
+        My fifteenth week... <br> I was also tired this week. I had monday off because it was Martin Luther King Jr. Day.
+        This week, we learned about chemical engineering. We learned that people that take this job are very helpful.
+        They solve problems by using cheap and time efficient ways. For example, we did a problem statement where we had to find a way to stop a large lake from giving cancer.
+        My groupmate and I came up with the idea of planting algae to block the sunlight. However, we later found that it would not work as well as we thought.
+        There was a solution to this problem. It was a real life problem, and it was solved by a group of people. 
+        They poured a bunch of small black balls in the pond. These balls floated on top of the lake, and blocked the sunlight, which stopped the lake from being hazardous.
+    </i></p>
 </i></p></P>
 <a href="https://www.tinkercad.com/things/dUhj5ar8xnn-nintendo-switch-engineering/edit">My Project</a>
 <img src="tinkercad.png">
